<resources>
    <string name="app_name">Fitness Gym</string>
    <string name="braco">Serie Braço</string>
    <string name="biceps">Biceps</string>
    <string name="serie_peito">Série Peito</string>
    <string name="peito">Peito</string>
    <string name="serie_ombro">Ombro</string>
    <string name="ombro">Ombro</string>
    <string name="serie_perna">Série Perna</string>
    <string name="perna">Perna</string>
    <string name="imc">Calcular IMC</string>
    <string name="view_serie">Visualizar Série</string>
    <string name="title_biceps">Biceps</string>
    <string name="title_triceps">Tríceps</string>
    <string name="barra_fixa_com_pegada_supinada">Barra fixa com pegada supinada</string>
    <string name="rosca_direta">Rosca Direta</string>
    <string name="rosca_martelo">Rosca Martelo</string>
    <string name="rosca_concentrada">Rosca Concentrada</string>
    <string name="rosca_inversa">Rosca Inversa</string>
    <string name="button_salvar">Salvar</string>

    <string name="triceps_testa">Extensão de tríceps deitado</string>
    <string name="supinado">Supino no banco reto com pegada fechada</string>
    <string name="mergulho">Mergulho no banco</string>
    <string name="triceps_no_banco">Tríceps no banco</string>
    <string name="extencao_alter_sob_cabeca">Extensão de halteres sob a cabeça</string>
    <string name="tirceps_barra_alta">Tríceps na polia alta com barra reta</string>
    <string name="tirceps_corda">Tríceps Cordas</string>

    <string name="numero_repeticoes">Nº Repetições</string>
    <string name="text_kg">Kg</string>
    <string name="title_dialog_treino">Repetições/Pesos</string>
    <string name="text_num_peso">Quantidade Peso</string>
    <string name="triceps">Tríceps</string>
    <string name="serie_costas">Serie Costas</string>
    <string name="costas">Costas</string>
    <string name="habilitar_treino">Habilitar Treino</string>
    <string name="title_dialog">Adicionar</string>
    <string name="title_exercicio">Exercício</string>
    <string name="title_serie_kg">Kg</string>
    <string name="supino_reto">Supino Reto</string>
    <string name="supino_45">Supino 45º</string>
    <string name="voador">Voador</string>
    <string name="crussifixo">Crussifixo</string>
    <string name="ombro_remada_alta">Remada Alta</string>
    <string name="ombro_remada_aparelho">Remada Aparelho</string>
    <string name="ombro_alternada">Remada Alternada</string>
    <string name="agaichamento_livre">Agaichamento Livre</string>
    <string name="extensora">Extensora</string>
    <string name="adutora">Adutora</string>
    <string name="agaichamento_smith">Agachamento Smith</string>
    <string name="title_peito">Peito</string>
    <string name="title_ombro">Ombro</string>
    <string name="title_costas">Costas</string>
    <string name="barra_fixa">Barra Fixa</string>
    <string name="remada_curvada">Remada curvada</string>
    <string name="barra_fixa_pegada_larg">Barra fixa com pegada larga</string>
    <string name="remada_uni_halter">Remada unilateral com haltere</string>
    <string name="pulover_halter">Pullover com haltere</string>
    <string name="remada_sentada">Pullover com haltere</string>
    <string name="title_perna">Perna</string>
    <string name="rept">Rept.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serie_a">Série A</string>
    <string name="serie_b">Série B</string>
    <string name="title_treino">Treino</string>
    <string name="title_serie">Séries</string>
    <string name="serie_a_fragemtn">SerieAFragment</string>
    <string name="serie_b_fragemtn">SerieBFragment</string>
    <string name="title_app">GymSeries</string>
    <string name="setting">Configurações</string>
    <string name="title_imc">IMC</string>
    <string name="main_fragemtn">MainFragments</string>
    <string name="imc_fragemtn">IMCFragments</string>
    <string name="setting_fragemtn">SettingFragment</string>
    <string name="title_settings">Configurações</string>
    <string name="title_home">Home</string>
    <string name="serie_fragemtn">SerieFragment</string>
    <string name="add_serie">Adicionar Série</string>
    <string name="title_alert">Alerta</string>
    <string name="button_confirmar">Confirmar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="deletar_serie">Deletar</string>
    <string name="msg_delete">Deseja excluir treino?</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="title_desc_imc">Índice de massa corporal(IMC)</string>
    <string name="title_sub_title_imc">Uma medida da gordura corporal em adultos</string>
    <string name="text_peso">Peso</string>
    <string name="text_altura">Altura</string>
    <string name="text_title_calculadora">Calculadora</string>
    <string name="sexo_f">Feminino</string>
    <string name="sexo_m">Masculino</string>
    <string name="button_calcular_imc">Calcular</string>
    <string name="title_chart">Gráfico</string>
    <string name="preencha_campos">*Preencha todos os campos !</string>
    <string name="titel_idade">Idade</string>
    <string name="text_saudavel">Saudável</string>
    <string name="title_calcular_imc">Calcular IMC</string>
    <string name="text_default_img">0,00 Kg</string>
    <string name="peso_baixo">Peso Baixo</string>
    <string name="peso_normal">Peso Normal</string>
    <string name="sobre_peso">Sobrepeso</string>
    <string name="sobre_peso_g1">Obesidade (Grau I)</string>
    <string name="sobre_peso_g2">Obesidade (Grau II)</string>
    <string name="title_dialof_calc_imc">Calcular IMC</string>
    <string name="title_dialog_chart">Adicionar Medidas</string>
    <string name="title_braco">Braço</string>
    <string name="title_cintura">Cintura</string>
    <string name="title_quadril">Quadril</string>
    <string name="title_coxa">Coxa</string>
    <string name="title_panturilha">Panturrilha</string>
    <string name="title_add_medidas">Adicionar Medidas</string>
    <string name="about">Sobre</string>
    <string name="title_help">Ajuda</string>
    <string name="hint_hieght">Altura</string>
    <string name="hint_peso">Peso</string>
    <string name="fala_init">Ola, para começar, preencha os campos acima.</string>
    <string name="switch_sexo">Masculino/Feminino</string>
    <string name="hint_save">Salvar</string>
    <string name="hint_altura">Altura</string>
    <string name="op_user">op_user</string>
    <string name="op_imc">op_imc</string>
    <string name="op_perna">op_perna</string>
    <string name="op_costa">op_costa</string>
    <string name="op_ombro">op_ombro</string>
    <string name="op_peito">op_peito</string>
    <string name="op_triceps">op_triceps</string>
    <string name="op_biceps">op_biceps</string>
    <string name="message_fail_save">Falha ao inseirir os dados</string>
    <string name="message_success_save">Sucesso ao inserir os dados!</string>
    <string name="loading">Carregando...</string>
    <string name="men">Homen</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="op_serie">op_serie</string>


</resources>
