<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_num_peso"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/spinner_kg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_line"
        tools:listitem="@layout/layout_spinner_text_view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numero_repeticoes"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/spinner_numero_repeticao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_line"
        tools:listitem="@layout/layout_spinner_text_view" />

    <Switch
        android:layout_marginTop="18dp"
        android:id="@+id/switch2"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habilitar_treino" />

    <Button
        android:id="@+id/button_salvar_dialog_treino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@android:color/holo_orange_dark"
        android:text="Salvar" />

</LinearLayout>