<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--triceos -->
        <TextView
            android:id="@+id/text_treino_1"
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title_triceps" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_fragemtn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_serie" />

        <!--Peito -->
        <TextView
            android:id="@+id/text_treino_2"
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title_peito" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_fragemtn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_serie" />

        <!--Ombro -->
        <TextView
            android:id="@+id/text_treino_3"
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title_ombro" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_fragemtn_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_serie" />

        <!--Perna -->
        <TextView
            android:id="@+id/text_treino_4"
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title_perna" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_fragemtn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_serie" />
    </LinearLayout>


</ScrollView>