<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_peso"
                    app:hintTextColor="@color/colorblack"
                    app:boxStrokeColor="@color/colorblack"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_text_peso_imc"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorblack"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_altura"
                    app:hintTextColor="@color/colorblack"
                    app:boxStrokeColor="@color/colorblack"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_text_altura_imc"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorblack"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_calcular_imc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/click_button"
                    android:text="@string/button_calcular_imc"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>